<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView android:id="@+id/welcome_message"
        android:text="@string/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/activity_main_signin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:onClick="get_sign_up"
            android:layout_alignBaseline="@+id/signin_button"
            android:layout_alignBottom="@+id/signin_button"
            android:layout_toRightOf="@+id/signin_button"
            android:layout_toEndOf="@+id/signin_button"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp" />

        <ImageView android:id="@+id/signin_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="75dp"
            android:src="@drawable/lh_logo2x"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button android:id="@+id/signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:onClick="get_sign_in"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_alignTop="@+id/signin_logo"
            android:layout_toRightOf="@+id/signin_logo"
            android:layout_toEndOf="@+id/signin_logo" />

    </RelativeLayout>

</RelativeLayout>
